--- a/app.wxss
+++ b/app.wxss
@@ -8,3 +8,15 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
+/* 全局变量定义 设置主题颜色，字体大小等 */
+page{
+  /* 主题颜色 */
+  --themeColor:#FF5700;
+  /* 字体大小 rpx自适应大小 */
+  font-size: 28rpx;
+}
+
+image{
+  width: 100%;
+}
