--- a/app.wxss
+++ b/app.wxss
@@ -1,13 +1,9 @@
-/**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
+/* 初始化全局样式 */
+page,view,text,swiper,swiper-item,image,navigator{
+  padding:0;
+  margin: 0;
   box-sizing: border-box;
-} 
+}
 
 /* 全局变量定义 设置主题颜色，字体大小等 */
 page{
