--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -17,6 +17,7 @@
   height: 70rpx;
   position: relative;
   background: #fff;
+  border-bottom: 1px black solid;
   .navItem{
     display: flex;
     align-items: center;
@@ -34,7 +35,7 @@
     display: flex;
     width: 670rpx;
     justify-content: space-between;
-    margin: 10rpx 40rpx;
+    margin: 20rpx 40rpx 0rpx 40rpx;
     .tab_menu{
       width: 200rpx;
       height: 100rpx;
@@ -51,7 +52,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      margin: 10rpx 40rpx;
+      margin: 20rpx 40rpx;
       padding: 10rpx 40rpx;
       border: 1rpx black solid;
       .c_name{
