--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -11,6 +11,7 @@
   height: 70rpx;
   position: relative;
   background: #fff;
+  border-bottom: 1px black solid;
 }
 .navBar .navItem {
   display: flex;
@@ -25,7 +26,7 @@
   display: flex;
   width: 670rpx;
   justify-content: space-between;
-  margin: 10rpx 40rpx;
+  margin: 20rpx 40rpx 0rpx 40rpx;
 }
 .content_wrapper .tab_menus .tab_menu {
   width: 200rpx;
@@ -41,7 +42,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10rpx 40rpx;
+  margin: 20rpx 40rpx;
   padding: 10rpx 40rpx;
   border: 1rpx black solid;
 }
