--- a/pages/publishRequirement/index.less
+++ b/pages/publishRequirement/index.less
@@ -1,4 +1,4 @@
-.req_title {
+.req_title{
   height: 200rpx;
   font-size: 70rpx;
   display: flex;
@@ -6,16 +6,18 @@
   justify-content: center;
   border-bottom: 1rpx black solid;
 }
-.form {
+
+.form{
   margin: 20rpx 80rpx;
-}
-.form .row {
-  display: flex;
-  height: 80rpx;
-}
-.form .row .desc {
-  flex: 1;
-}
-.form .row .input {
-  flex: 3;
+  .row{
+    display: flex;
+
+    height: 80rpx;
+    .desc{
+      flex: 1;
+    }
+    .input{
+      flex: 3;
+    }
+  }
 }
