--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -58,10 +58,16 @@
       .c_name{
         flex: 1;
         color: #a1a1a1;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
       .c_title{
         flex: 2;
         padding: 10rpx 0rpx;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
       .c_state{
         flex: 1;
@@ -70,6 +76,9 @@
           color: #a1a1a1;
           padding-right: 10rpx;
         }
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
   }
