--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -49,14 +49,23 @@
 .content_wrapper .tab_content .tab_list .c_name {
   flex: 1;
   color: #a1a1a1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .content_wrapper .tab_content .tab_list .c_title {
   flex: 2;
   padding: 10rpx 0rpx;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .content_wrapper .tab_content .tab_list .c_state {
   flex: 1;
   display: flex;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .content_wrapper .tab_content .tab_list .c_state .font_state {
   color: #a1a1a1;
